...
    goBackOpacity: 'go-back-opacity',
    closeIcon: 'close-icon',
    title: 'title',
    message: 'message',
    scrollView: 'scroll-view',
    nameDescriptionSectionView: 'name-description-section-view',
    nameInput: 'name-input',
    descriptionInput: 'description-input',
    sectionInput: 'section-input',
    creditsComponentView: 'credits-component-view',
    descreaseCreidtsButton: 'descrease-credits-button',
    creditsView: 'credits-view',
    creditsTitle: 'credits-title',
    creditsIcon: 'credits-icon',
...
